--- a/templates/signup.html
+++ b/templates/signup.html
@@ -106,7 +106,7 @@
 							</div>
                             <div class="row">
 								<!-- <span class="fa fa-lock"></span> -->
-								<input type="conpassword" name="conpassword" id="conpassword" class="form__input signup_input" placeholder="Confirm Password">
+								<input type="password" name="conpassword" id="conpassword" class="form__input signup_input" placeholder="Confirm Password">
 							</div>
 							<!-- <div class="row">
 								<input type="checkbox" name="remember_me" id="remember_me" class="">
