--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -39,16 +39,10 @@
                                         <span>{{user.first_name}}<span>
                                     </a>
 
-                                    <!-- <a class="lgx-scroll btn lgx-btn dropdown-toggle" href="#" role="button"
-                                        id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        {{user.first_name}}
-                                    </a> -->
-
                                     <div  class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
                                         <a class="dropdown-item py-4 text-right " href="user-profile">Profile</a>
                                         <!-- <a class="dropdown-item" href="#">Another action</a> -->
-                                        <a c class="dropdown-item py-4 text-right" href="logout/">Logout</a>
+                                        <a class="dropdown-item py-4 text-right" href="logout/">Logout</a>
                                     </div>
                                 </div>
                             </li>
